# ANVIL

./: .coverage  .env.example  .gitignore  02_TRD_ANVIL.md  05_BACKEND_SCHEMA_ANVIL.md  06_IMPLEMENTATION_PLAN_ANVIL.md  CHANGELOG.md  LICENSE  README.md  anvil.config.example.yaml  first_tool.py  pyproject.toml
docs/: architecture.md  faq.md  memory.md  writing_a_tool.md  writing_an_agent.md
docs/planning/: 01_PRD_ANVIL.md  02_TRD_ANVIL.md  03_APP_FLOW_ANVIL.md  04_UIUX_DESIGN_BRIEF_ANVIL.md  05_BACKEND_SCHEMA_ANVIL.md  06_IMPLEMENTATION_PLAN_ANVIL.md
examples/: .env.example
examples/research_agent/: README.md  agent.py  anvil.config.yaml  tools.py
examples/scaffold_agent/: README.md  agent.py  anvil.config.yaml  tools.py
frontend/: app.js  index.html  styles.css
my_agent/: agent.py
src/anvil/: __init__.py  agent.py  config.py
src/anvil/cli/: main.py
src/anvil/execution/: executor.py
src/anvil/healing/: self_heal.py
src/anvil/llm/: groq_client.py
src/anvil/memory/: store.py
src/anvil/planning/: models.py  planner.py
src/anvil/quality/: checks.py  enforcer.py
src/anvil/tools/: builtin_fs.py  builtin_shell.py  registry.py
src/anvil/tracing/: trace.py
tests/: conftest.py  test_config.py  test_executor.py  test_memory.py  test_paths.py  test_planner.py  test_quality_enforcer.py  test_runner.py  test_self_heal.py  test_tools_registry.py
web/backend/: api.py
web/frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: Sidebar.tsx
(+6 files in other folders)
